syntax = "proto3";

package post;

option go_package = "/post";

import "google/protobuf/timestamp.proto";

service PostService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc GetById(GetByIdRequest) returns (GetByIdResponse);
    rpc GetPagination(GetPaginationRequest) returns (GetPaginationResponse);
}

message CreateRequest {
    uint64 author_id = 1;
    string content = 2;
}

message CreateResponse {
    uint64 post_id = 1;
}

message UpdateRequest {
    uint64 author_id = 1;
    uint64 post_id = 2;
    string content = 3;
}

enum AccessResult {
    SUCCESS = 0;
    ACCESS_DENIED = 1;
    NOT_FOUND = 2;
}

message UpdateResponse {
    AccessResult access = 1;
}

message DeleteRequest {
    uint64 author_id = 1;
    uint64 post_id = 2;
}

message DeleteResponse {
    AccessResult access = 1;
}

message GetByIdRequest {
    uint64 post_id = 1;
}

message Post {
    uint64 post_id = 1;
    uint64 author_id = 2;
    string content = 3;
    google.protobuf.Timestamp create_timestamp = 4;
    optional google.protobuf.Timestamp update_timestamp = 5;
}

message GetByIdResponse {
    AccessResult access = 1;
    optional Post post = 2;
}

message GetPaginationRequest {
    uint64 author_id = 1;
    uint64 offset = 2;
    uint32 limit = 3;
}

message GetPaginationResponse {
    repeated Post posts = 1;
}
